--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   line-height: 1.6;
   font-family: 'IBM Plex Serif';
   background-color: #000;
+  color: #333;
 }
 
 @keyframes moveInTop {
@@ -122,7 +123,7 @@ body {
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   color: #f3f2ea;
-  transition: all 0.6s ease;
+  transition: all 0.3s ease-in;
   animation: moveInBottom 1s ease-out;
 }
 
@@ -130,7 +131,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 /* HERO */
@@ -161,5 +162,5 @@ main {
 .about__blockquote {
   line-height: 1.8;
   width: 80%;
-  font-size: 2.6rem;
+  font-size: 2.5rem;
 }
